ajout de la gestion academique et des inscriptions academique.

--- a/gradeManagerServerAPi.csproj
+++ b/gradeManagerServerAPi.csproj
@@ -1,15 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>documentation.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\DB\**" />
+    <Content Remove="Models\DB\**" />
+    <EmbeddedResource Remove="Models\DB\**" />
+    <None Remove="Models\DB\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="itext7" Version="9.0.0" />
     <PackageReference Include="MailKit" Version="4.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
@@ -31,10 +39,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\AdministrationC\" />
-    <Folder Include="Models\AdministrationM\" />
-    <Folder Include="Models\DB\" />
-    <Folder Include="Models\StudentM\" />
     <Folder Include="Services\Administration\AcademicArchiService\" />
     <Folder Include="Services\Administration\" />
     <Folder Include="Services\Student\Inscription\" />
