generation de la fiche d'inscription en pdf

--- a/gradeManagerServerAPi.csproj
+++ b/gradeManagerServerAPi.csproj
@@ -17,8 +17,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="itext7" Version="9.0.0" />
-    <PackageReference Include="MailKit" Version="4.10.0" />
+	  
+
+	  <PackageReference Include="MailKit" Version="4.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
@@ -34,6 +35,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.4.0" />
     <PackageReference Include="MimeKit" Version="4.10.0" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.65" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.4.0" />
@@ -43,6 +45,10 @@
     <Folder Include="Services\Administration\AcademicArchiService\" />
     <Folder Include="Services\Administration\" />
     <Folder Include="Services\Student\Inscription\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
